<resources>

    <string name="app_name">Pemanasan Vokal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_pemanasan">Pemanasan Vokal</string>
    <string name="btn_latper">Latihan Pernafasan</string>
    <string name="btn_exit">Keluar</string>
    <string name="rb_8">8 detik</string>
    <string name="rb_12">12 detik</string>
    <string name="rb_16">16 detik</string>
    <string name="rb_20">20 detik</string>
    <string name="daftar_pemanasan">DAFTAR LATIHAN PEMANASAN VOKAL</string>
    <string name="btn_hum">Hum</string>
    <string name="btn_googo">Googo</string>
    <string name="btn_gnung">Gnung</string>
    <string name="btn_aaah">Aaah</string>
    <string name="btn_ooze">Ooze</string>
    <string name="btn_demo">DEMO</string>
    <string name="btn_lthn">LATIHAN</string>
    <string-array name="nada_dasar">
        <item>C2</item>
        <item>D2</item>
        <item>E2</item>
        <item>F2</item>
        <item>G2</item>
        <item>A2</item>
        <item>B2</item>
        <item>C3</item>
    </string-array>
</resources>
